Updated link to arxiv paper

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ We demonstrate both qualitatively and quantitatively significantly improved moti
             <table align=center width=700>
              <center><h1>Paper</h1></center>
                 <tr>
-                  <td><a href="https://arxiv.org/"><img style="height:180px; border: solid; border-radius:30px;" src="./files/paper_small.png"/></a></td>
+                  <td><a href="https://arxiv.org/abs/2109.09913"><img style="height:180px; border: solid; border-radius:30px;" src="./files/paper_small.png"/></a></td>
                   <td><span style="font-size:18px"> Kevin Xie, Tingwu Wang, Umar Iqbal, <br> Yunrong Guo, Sanja Fidler, Florian Shkurti<br><br>
                 Physics-based Human Motion Estimation and Synthesis from Videos <br>
                 ICCV 2021
@@ -330,13 +330,13 @@ We demonstrate both qualitatively and quantitatively significantly improved moti
               <tr>
 					<td>  
                     <span style="font-size:18px"><center>
-                      <a href="https://arxiv.org/abs/">[Paper]</a>
+                      <a href="https://arxiv.org/abs/2109.09913">[Paper]</a>
                     </center></td>
 					
 					<td>  
-                    <span style="font-size:18px"><center>
-                      <a href="./files/supplement.zip">[Supplement]</a>
-                    </center></td>
+                    <!-- <span style="font-size:18px"><center> -->
+                    <!--   <a href="./files/supplement.zip">[Supplement]</a> -->
+                    <!-- </center></td> -->
 
                   <!-- <td><span style="font-size:18px"><center> -->
                   <!--     <a href="./bib.html">[Bibtex]</a> -->
